# InjectDll

./: CMakeLists.txt  README.md
include/: include.h  tools.h
lib/: wow64ext.lib
src/: main.cpp
src/inject_dll/: inject_dll.cpp  inject_dll.h
tools/: tools.cpp  tools.h
